--- a/labs/lab_3/Presentation_slides_final.qmd
+++ b/labs/lab_3/Presentation_slides_final.qmd
@@ -70,17 +70,13 @@ Yet the city’s current Automated Valuation Model doesn’t always capture thes
 # Chapter 2. The Approach: From Simple Models to Smarter Predictions
 
 
+
 ## Where Are Expensive Homes?
 ::: {.columns}
 ::: {.column width="62%"}
-
-```{r}
-#| eval: true
-#| echo: false
-# price distribution
-
-```
+![](Housing Sales in Philadelphia.png)
 :::
+
 
 ::: {.columns}
 ::: {.column width="38%"}
@@ -89,6 +85,8 @@ Yet the city’s current Automated Valuation Model doesn’t always capture thes
 -  **highest-priced properties**: Center City core, University City.
 -  **Middle & Lower-Price tiers** : North Philadelphia, West Philadelphia (outside the university sphere), and South Philadelphia.
 - Account for the specific **"micro-market"** in which a property is situated.
+:::
+:::
 
 ```{r}
 #| eval: true
@@ -97,25 +95,23 @@ Yet the city’s current Automated Valuation Model doesn’t always capture thes
 
 ```
 :::
-:::
 
+
+---
 
 ## Why Are They Expensive?
-```{r}
-# 历史周边房子售价
+![](Buffered Area Mean Sold Price of 2022.png)
 
-```
-
+---
 
 ## Highlight
 ![Our adjustment follows established mass appraisal practices, where implausible sale prices are identified and adjusted based on their ratio to assessed market value (Deaf Smith CAD, Mass Appraisal and Ratio Study Manual, 2023).](highlight.png)
-```{r}
-
-```
-
 - **Principle**：Retain all information that the data tells us (including outliers) rather than deleting it.
+
 - **Objective**：Ensure equity.
+
 - **Relationship Formula**: Sale Price = -9189.29 + 1.03*Market value
+
 - **Approach**: Unreliable sale price(low weight)~ Reliable sale price(high weight)
 
 
@@ -159,14 +155,23 @@ Yet the city’s current Automated Valuation Model doesn’t always capture thes
 
 
 ## Identifying the Hardest-to-Predict Neighborhoods
-```{r}
-# residual distribution
 
-```
+::: {.columns}
+::: {.column width="62%"}
+![](Hardest to Predict Neighborhoods in Philadelphia.png)
+
+:::
+
+::: {.columns}
+::: {.column width="38%"}
 **Interpretation**
 
-1. 哪里高估哪里低估（列出zipcode）--删
-2. 详细说可能的成因--删
+1. **Underestimate zip code:** 19130, 19123, 19104, 19144...  
+**Overestimate zip code:** 19102, 19107, 19116, 19154...
+2. Market is moving faster than the city’s valuation system can keep up.
+:::
+:::
+:::
 
 
 ## Recommendations and Limitations
